# gcn-static-patcher

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile-build  build_universal_notarize.sh  patcher_config.toml  rustfmt.toml
.github/workflows/: build.yml  compile.yml  docker-build-publish.yml  docker-build.yml  docker-patcher-publish.yml  docker-patcher.yml
python/: patch_dev.sh
src/: lib.rs  main.rs  patch_config.rs  patch_dol.rs  patch_iso.rs  progress.rs
src/binser/: binstream.rs  mod.rs
src/binstream/: mod.rs
src/dol/: mod.rs
src/gcdisc/: fst.rs  gc_disc_header.rs  mod.rs
