[package]
name = "gcn-static-patcher"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }

eframe = { version = "0.33.3", features = ["default"] }
egui_extras = { version = "0.33.3", features = ["default", "image"] }
image = { version = "0.25.9", features = ["png"] }
rfd = "0.17.2"

anyhow = "1.0.100"
object = { version = "0.38.1" , default-features = false, features = ["read_core", "elf"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.11"

memmap2 = "0.9.9"

log = "0.4.29"
env_logger = "0.11.8"
md-5 = "0.10.6"
