[package]
name = "gcn-static-patcher"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }

eframe = { version = "0.33.3", features = ["default"], optional = true }
egui_extras = { version = "0.33.3", features = ["default", "image"], optional = true }
image = { version = "0.25.9", features = ["png"], optional = true }
rfd = { version = "0.17.2", optional = true }

anyhow = "1.0.100"
object = { version = "0.38.1", default-features = false, features = ["read_core", "elf"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"

memmap2 = "0.9.9"

log = "0.4.29"
fern = "0.7.1"
md-5 = "0.10.6"
chrono = "0.4.43"

[features]
default = ["gui"]
gui = ["eframe", "egui_extras", "image", "rfd"]

[[bin]]
name = "gcn-static-patcher-gui"
path = "src/bin/gcn-static-patcher-gui.rs"
required-features = ["gui"]

[profile.release]
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true